WIP scheduler integration

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,6 +22,10 @@
         <ion-item menu-close href="#/app/home">
           Home
         </ion-item>
+		
+		<ion-item menu-close href="#/app/jobs">
+          Scheduled Jobs
+        </ion-item>
         
       </ion-list>
     </ion-content>
