--- a/www/templates/jobs/add.html
+++ b/www/templates/jobs/add.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Add new Job">
   <ion-content>
-	<form name="jobForm" ng-submit="add()">
+	<form name="jobForm" ng-submit="addJob()">
             <div class="list">
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">Job Name</span>
@@ -9,11 +9,19 @@
                            ng-model="jobInfo.jobName"
                            name="jobName"
                            title="Job Name"
-                           ng-class="{'has-error': jobForm.jobName.$invalid}">
+                           ng-class="{'has-error': jobForm.jobName.$invalid}"
+					   >
                 </label>
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">CRON Schedule</span>
-                    <input required type="text" ng-model="jobInfo.cronSchedule">
+                    <input 
+						required 
+						type="text" 
+						name="cronSchedule"
+						ng-model="jobInfo.cronSchedule"
+						ng-pattern="/(((([0-9]|[0-5][0-9]),)*([0-9]|[0-5][0-9]))|(([\*]|[0-9]|[0-5][0-9])(/|-)([0-9]|[0-5][0-9]))|([\?])|([\*]))[\s](((([0-9]|[0-5][0-9]),)*([0-9]|[0-5][0-9]))|(([\*]|[0-9]|[0-5][0-9])(/|-)([0-9]|[0-5][0-9]))|([\?])|([\*]))[\s](((([0-9]|[0-1][0-9]|[2][0-3]),)*([0-9]|[0-1][0-9]|[2][0-3]))|(([\*]|[0-9]|[0-1][0-9]|[2][0-3])(/|-)([0-9]|[0-1][0-9]|[2][0-3]))|([\?])|([\*]))[\s](((([1-9]|[0][1-9]|[1-2][0-9]|[3][0-1]),)*([1-9]|[0][1-9]|[1-2][0-9]|[3][0-1])(C)?)|(([1-9]|[0][1-9]|[1-2][0-9]|[3][0-1])(/|-)([1-9]|[0][1-9]|[1-2][0-9]|[3][0-1])(C)?)|(L(-[0-9])?)|(L(-[1-2][0-9])?)|(L(-[3][0-1])?)|(LW)|([1-9]W)|([1-3][0-9]W)|([\?])|([\*]))[\s](((([1-9]|0[1-9]|1[0-2]),)*([1-9]|0[1-9]|1[0-2]))|(([1-9]|0[1-9]|1[0-2])(/|-)([1-9]|0[1-9]|1[0-2]))|(((JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC),)*(JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC))|((JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC)(-|/)(JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC))|([\?])|([\*]))[\s]((([1-7],)*([1-7]))|([1-7](/|-)([1-7]))|(((MON|TUE|WED|THU|FRI|SAT|SUN),)*(MON|TUE|WED|THU|FRI|SAT|SUN)(C)?)|((MON|TUE|WED|THU|FRI|SAT|SUN)(-|/)(MON|TUE|WED|THU|FRI|SAT|SUN)(C)?)|(([1-7]|(MON|TUE|WED|THU|FRI|SAT|SUN))?(L|LW)?)|(([1-7]|MON|TUE|WED|THU|FRI|SAT|SUN)#([1-7])?)|([\?])|([\*]))([\s]?(([\*])?|(19[7-9][0-9])|(20[0-9][0-9]))?| (((19[7-9][0-9])|(20[0-9][0-9]))(-|/)((19[7-9][0-9])|(20[0-9][0-9])))?| ((((19[7-9][0-9])|(20[0-9][0-9])),)*((19[7-9][0-9])|(20[0-9][0-9])))?)/" 
+						ng-class="{'has-error': jobForm.cronSchedule.$invalid}"
+					>
                 </label>
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">Topic</span>
@@ -27,6 +35,11 @@
             <div class="card">
                 <div class="item item-text-wrap">
                     <button class="button button-block button-positive" type="submit" ng-disabled="jobForm.$invalid">Submit</button>
+                </div>
+            </div>
+			<div class="card">
+                <div class="item item-text-wrap">
+                    <button ng-click="showCronHelp()" class="button button-block button-outline button-positive">CRON Help</button>
                 </div>
             </div>
         </form>
