added broker configuration screen

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -26,6 +26,10 @@
 		<ion-item menu-close href="#/app/jobs">
           Scheduled Jobs
         </ion-item>
+		
+		<ion-item menu-close href="#/settings/mqbroker">
+          MQ Broker
+        </ion-item>
         
       </ion-list>
     </ion-content>
