testing and bug fixes for interactions with IoTHome

--- a/www/templates/jobs/add.html
+++ b/www/templates/jobs/add.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Add new Job">
-  <ion-content>
+  <ion-content ng-controller="AppCtrl">
 	<form name="jobForm" ng-submit="addJob()">
             <div class="list">
                 <label class="item item-input item-stacked-label">
