Moved Power Monitoring to Dedicated page

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,6 +23,10 @@
           Home
         </ion-item>
 		
+		<ion-item menu-close href="#/powermon/dashboard">
+          Power Monitoring
+        </ion-item>
+		
 		<ion-item menu-close href="#/app/jobs">
           Scheduled Jobs
         </ion-item>
