--- a/www/templates/settings/mqbroker.html
+++ b/www/templates/settings/mqbroker.html
@@ -1,5 +1,5 @@
 <ion-view view-title="MQ Broker Settings">
-  <ion-content ng-controller="SettingsCtrl">
+  <ion-content>
 	<form name="settingsForm" ng-submit="saveSettings()">
             <div class="list">
                 <label class="item item-input item-stacked-label">
