--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,6 +27,10 @@
           Power Monitoring
         </ion-item>
 		
+		<ion-item menu-close href="#/control/dashboard">
+          Direct Control
+        </ion-item>
+		
 		<ion-item menu-close href="#/app/jobs">
           Scheduled Jobs
         </ion-item>
